--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,15 @@
             </intent-filter>
         </receiver>
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity" />
         <activity android:name=".ReportsActivity" />
         <activity android:name=".BillActivity" />
         <activity android:name=".CollectionActivity" />
