commit by sateesh

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ammulu.waterbilling">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -9,16 +10,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.SET_DEBUG_APP" />
+    <uses-permission android:name="android.permission.SET_DEBUG_APP"
+        tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <application
         android:name=".Network.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/transbillingdevice"
+        android:icon="@drawable/transwaterlogo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/transbillingdevice"
+        android:roundIcon="@drawable/transwaterlogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <receiver
